# address-converter

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: infra.rs  main.rs
src/domain/: model.rs  usecases.rs
src/domain/model/: address.rs  country.rs  french_address.rs  french_address_test.rs  structured_address.rs  structured_address_test.rs
src/domain/ports/: secondary.rs
src/domain/ports/primary/: usecases.rs
src/domain/ports/secondary/: address_repository.rs
src/domain/usecases/: convert_french_to_structured.rs  convert_french_to_structured_test.rs  convert_structured_to_french.rs  convert_structured_to_french_test.rs
src/infra/: config.rs  presenters.rs  repositories.rs
src/infra/presenters/: arguments.rs  console.rs
src/infra/repositories/: file.rs  in_memory.rs
tests/: cli_integration_test.rs  db-test.json
