[package]
name = "address-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "macro-diagnostics"] }